--- a/config/database.yml
+++ b/config/database.yml
@@ -3,6 +3,8 @@ default: &default
   encoding: unicode
   database: dari_guru_dev
   pool: 5
+  username: topan
+  password: develop123
 
 development:
   <<: *default
