--- a/config/database.yml
+++ b/config/database.yml
@@ -7,18 +7,18 @@ default: &default
 
 development:
   <<: *default
-  database: db/dari_guru_dev
+  database: db/dari_guru_bike_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/dari_guru_test
+  database: db/dari_guru_bike_test
 
 production:
   <<: *default
-  database: db/dari_guru_production
+  database: db/dari_guru_bike_production
 
 
 # production:
